# rg-slurm-build-demo

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  COPYING.md  FILESTRUCTURE.md  LICENSE  LICENSE.md  README.md  TODO.md
.github/: actionlint.yml
.github/workflows/: ci.yml
app/: CMakeLists.txt  rg-build-demo_app.cpp
doc/: CMakeLists.txt  conf.py  index.rst  requirements-rtd.txt
include/rg-build-demo/: rg-build-demo.hpp
slurm/: slurm-arm.sh  slurm-riscv.sh
src/: CMakeLists.txt  rg-build-demo.cpp
tests/: CMakeLists.txt  rg-build-demo_t.cpp
